finished the header and first container

--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melanie</title>
+    <title>Melanie Fan Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div class="header">
-      <img src="" alt="logo">
-      <div class="header-link-one">header-link-one"<a href=""></a></div>
-      <div class="header-link-two">header-link-two<a href=""></a></div>
-      <div class="header-link-three">header-link-three<a href=""></a></div>
+
+      <img class="logo" src="images/melanie-logo.png" alt="logo">
+      <div class="header-link-container">
+        <div class="header-link-one">About<a href=""></a></div>
+        <div class="header-link-two">Contact<a href=""></a></div>
+        <div class="header-link-three">Support<a href=""></a></div>
+      </div>
     </div>
 
     <div class="first-container">
 
       <div class="first-sub-container">
-        <div class="hero-main-text">This website is awesome</div>
-        <div class="here-secondary-text">This website has some subtext that goes here under the main title. It's a small font and the colour is lower contrast.</div>
-        <div class="sign-up"><button>Sign up</button></div>
+        <div class="hero-main-text">Melanie Fan Page</div>
+        <div class="hero-secondary-text">The wild documented life of an orphan fluffball.</div>
+        <div class="donate"><button>Donate</button></div>
       </div>
 
       <div class="second-sub-container">
 
-        <div class="main-image"><img src="" alt="Main Image"></div>
+        <div class="main-image"><img src="images/melanie-main-photo.png" alt="Main Image"></div>
 
       </div>
     </div>
@@ -55,8 +59,20 @@
 
     </div>
 
-    
+    <div class="forth-container">
 
+      <div class="call-action-container">
+        <div class="call-title">Call to action! It's Time!</div>
+        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+      </div>
+
+      <div class="sign-up-bottom"></div>
+
+    </div>
+
+    <div class="footer-container">
+      <div class="footer-text">Copyright © Peen B&M Discord Server</div>
+    </div>
 
 </body>
 </html>
