just need to add the footer now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melanie Fan Page</title>
+    <title>Melanie</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
       <div class="first-sub-container">
         <div class="hero-main-text">Melanie Fan Page</div>
         <div class="hero-secondary-text">The wild documented life of an orphan fluffball.</div>
-        <div class="donate"><button>Donate</button></div>
+        <div class="donate"><button>Send Help</button></div>
       </div>
 
       <div class="second-sub-container">
@@ -36,13 +36,14 @@
 
     <div class="second-container">
 
-      <div class="bold-information">Some random information.</div>
+      <div class="bold-information">A day in the life:</div>
 
       <div class="gallery-container">
-        <div class="sub-container1">sub-container1 <img src="" alt=""></div>
-        <div class="sub-container2">sub-container2 <img src="" alt=""></div>
-        <div class="sub-container3">sub-container3 <img src="" alt=""></div>
-        <div class="sub-container4">sub-container4 <img src="" alt=""></div>
+        <div class="sub-container1">Melanie cuddles with her best friend. <img src="images/melanie-best-friend.jpeg" alt=""></div>
+        <div class="sub-container2">Melanie tries the break into other rooms. <img src="images/melanie-breaking-into-bathroom.jpeg" alt=""></div>
+        <div class="sub-container3">Melanie waits for the perfect time to attack... <img src="images/melanie-hiding.jpeg" alt=""></div>
+        <div class="sub-container4">Melanie attacks her victim, scarring them! <img src="images/melanie-scratch.png" alt=></div>
+        <div class="sub-container5">Melanie dreams about violence.   <img src="images/melanie-sleeping.jpeg" alt=""></div>
       </div>
 
     </div>
@@ -50,24 +51,29 @@
     <div class="third-container">
 
       <div class="quote-container">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote">"I will never forget the one time Melanie was a kitten, it was when I had white sheets on my bed & she full on jumped in my coffee cup. She not only got it all over my bed but I had to give her a bath because she was brown too lol."</div>
       </div>
       
       <div class="quote-by-container">
-        <div class="quote-by">- Peen.M, Owner</div>
+        <div class="quote-by">- Peen.M, Kidnapper</div>
       </div>
 
     </div>
 
     <div class="forth-container">
 
-      <div class="call-action-container">
-        <div class="call-title">Call to action! It's Time!</div>
-        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
-      </div>
+      <div class="button-card-container">
 
-      <div class="sign-up-bottom"></div>
+        <div class="call-action-container">
+            <div class="call-title">Donate Toys For Melanie Here!</div>
+            <div class="call-text">Melanie is in need of toys because she keeps destroying the ones she receives!</div>
+        </div>
 
+            <div class="button-container">
+                <div class="help"><button>Donate Now</button></div>
+            </div>
+        
+      </div>   
     </div>
 
     <div class="footer-container">
